--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "path": "^0.12.7",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.26",
+    "vue-router": "^0.7.13",
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.0",
     "lodash": "^4.14.1",
